kubernetes/prod/apps/home-automation/frigate/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: frigate
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: frigate
  egress:
    # MQTT
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: emqx
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
